# atheme

./: .gitattributes  .gitignore  .gitmodules  .hgignore  .logo  .mailmap  .travis  .travis.yml  BSDmakefile  COPYING  ChangeLog  Dockerfile  GIT-Access  GIT-Access.txt  INSTALL  Makefile  Makefile.in  Makefile.win32  Mercurial-Access  NEWS  NEWS.md  README  README.md  SECURITY.md  SVN-Access  TODO  aclocal.m4  atheme-services.pc.in  autogen.sh  buildsys.mk  buildsys.mk.in  buildsys.module.mk  configure  configure.ac  extra.mk.in  gender  gender.c  mingw-build.sh  pronouns  pronouns.c  (+1 more)
SQL/: atheme_init.mysql  atheme_init.pgsql  atheme_init.sql
autoconf/: atheme-c.m4  install-sh
backend/: .depend  Makefile.in  Makefile.win32  flatfile.c  mysql.c  postgresql.c
contrib/: .depend  Atheme.pm  Makefile  Makefile.in  README  add_badpasswdmsg.pl  anope-1.9.2-convert.php  anope_convert.c  cap_sasl.pl  check_collisions.pl  cs_babbler.c  cs_count.c  cs_kickdots.c  cs_ping.c  cs_repair.c  cs_sync.c  cs_updown.c  cs_userinfo.c  database-ts.pl  dbread.pl  fc_dice.c  gen_echoserver.c  gen_httpd.c  gen_listenerdemo.c  gen_regcheckemail.c  gen_vhostonreg.c  graphtastical.c  hybservtoatheme.pl  ircd_alis.c  ircd_catserv.c  ircd_loveserv.c  ircd_nohalfops.c  ircd_noholdnick.c  ircd_noowner.c  ircd_noprotect.c  ircs_crypto_trans.c  ircservtoatheme.php  mlocktweaker.c  ns_ajoin.c  ns_enforce.c  (+31 more)
crypto/: .depend  Makefile.in  ircservices.c  posix.c  sorservices.c
dbtool/: Makefile.in  Makefile.win32  dbtool.c
doc/: CRYPTO-API  CRYPTO-LIBRARIES  FAQ  HOOKS  IRCD  JSONRPC  LICENSE  MODES  PCOMMANDS  POSTGRESQL  PRIVILEGES  RELEASE  RFC1459  ROADMAP  SASL  SASL-SCRAM  SASL-SCRAM-SHA  SQL  TRANSLATION  VERSION_LETTERS  WINDOWS  XMLRPC  example_module.c
include/: .indent.pro  Makefile  abirev.h  account.h  atheme.h  atheme_memory.h  atheme_random.h  atheme_string.h  attrs.h  auth.h  authcookie.h  balloc.h  base64.h  callback.h  channels.h  cmd.h  commandhelp.h  commandtree.h  common-ctcp.h  common.h  compat.h  conf.h  confparse.h  confprocess.h  connection.h  crypto.h  culture.h  database_backend.h  datastream.h  dictionary.h  digest.h  digest_fe_internal.h  digest_fe_mbedtls.h  digest_fe_nettle.h  digest_fe_openssl.h  dlink.h  entity-validation.h  entity.h  event.h  extern.h  (+49 more)
libatheme/: .depend  Makefile.in  Makefile.win32  balloc.c  balloc.h  callback.c  callback.h  claro.c  claro_internal.h  connection.c  connection.h  datastream.c  dlink.c  dlink.h  event.c  event.h  hook.c  hook.h  libatheme.c  linker.c  linker.h  memory.c  org.atheme.claro.base  org.atheme.claro.base.datastream  org.atheme.claro.base.memory  org.atheme.claro.base.string  poll.c  process.c  select.c  sockio.c  sockio.h  stdinc.h  string.c  string.h  win32.c
libathemecore/: Makefile  account.c  arc4random.c  atheme.c  auth.c  authcookie.c  base64.c  channels.c  cidr.c  cmode.c  commandhelp.c  commandtree.c  conf.c  confparse.c  confprocess.c  connection.c  crypto.c  ctcp-common.c  culture.c  database_backend.c  datastream.c  digest_be_md5.c  digest_be_md5.h  digest_be_sha1.c  digest_be_sha1.h  digest_be_sha2.c  digest_be_sha2.h  digest_be_sha2_256.c  digest_be_sha2_512.c  digest_direct_md5.c  digest_direct_sha1.c  digest_direct_sha2.c  digest_fe_gcrypt.c  digest_fe_internal.c  digest_fe_internal_testsuite.c  digest_fe_mbedtls.c  digest_fe_nettle.c  digest_fe_openssl.c  digest_fe_shared.c  digest_frontend.c  (+58 more)
libmowgli/: .hg_archival.txt  .hgignore  .hgtags  AUTHORS  COPYING  Makefile  Mercurial-Access  README  buildsys.mk.in  configure  configure.ac  extra.mk.in  libmowgli.pc.in
libmowgli/doc/: BOOST
libmowgli/m4/: buildsys.m4  dl.m4
libmowgli/mk/: rules.mk.in
libmowgli/src/: Makefile
libmowgli/src/examples/: Makefile
libmowgli/src/examples/delegatetest/: Makefile  delegatetest.c
libmowgli/src/examples/dicttest/: Makefile  dicttest.c
libmowgli/src/examples/formattertest/: Makefile  formattertest.c
libmowgli/src/examples/listsort/: Makefile  listsort.c
libmowgli/src/examples/patriciatest/: Makefile  patriciatest.c
libmowgli/src/examples/patriciatest2/: Makefile  patriciatest2.c
libmowgli/src/examples/randomtest/: Makefile  randomtest.c
libmowgli/src/libmowgli/: Makefile  mowgli.h  mowgli_alloc.c  mowgli_alloc.h  mowgli_allocation_policy.c  mowgli_allocation_policy.h  mowgli_allocator.c  mowgli_allocator.h  mowgli_argstack.c  mowgli_argstack.h  mowgli_assert.h  mowgli_bitvector.c  mowgli_bitvector.h  mowgli_config.h.in  mowgli_delegate.h  mowgli_dictionary.c  mowgli_dictionary.h  mowgli_error_backtrace.c  mowgli_error_backtrace.h  mowgli_exception.h  mowgli_formatter.c  mowgli_formatter.h  mowgli_global_storage.c  mowgli_global_storage.h  mowgli_hash.c  mowgli_hash.h  mowgli_heap.c  mowgli_heap.h  mowgli_hook.c  mowgli_hook.h  mowgli_init.c  mowgli_init.h  mowgli_ioevent.c  mowgli_ioevent.h  mowgli_iterator.h  mowgli_list.c  mowgli_list.h  mowgli_logger.c  mowgli_logger.h  mowgli_mempool.c  (+29 more)
m4/: atheme-api-digest-frontend.m4  atheme-api-random-frontend.m4  atheme-c.m4  atheme-cflags.m4  atheme-check-build-requirements.m4  atheme-conditional-compilation.m4  atheme-digest-frontend.m4  atheme-featuretest-cflags.m4  atheme-featuretest-compiler-sanitizers.m4  atheme-featuretest-contrib.m4  atheme-featuretest-cppflags.m4  atheme-featuretest-crypto-benchmarking.m4  atheme-featuretest-debugging.m4  atheme-featuretest-ecdh-x25519-tool.m4  atheme-featuretest-ecdsa-nist256p-tools.m4  atheme-featuretest-fhspaths.m4  atheme-featuretest-heap-allocator.m4  atheme-featuretest-largenet.m4  atheme-featuretest-ldflags.m4  atheme-featuretest-legacy-pwcrypto.m4  atheme-featuretest-linkerflags.m4  atheme-featuretest-nls.m4  atheme-featuretest-reprobuilds.m4  atheme-featuretest-sodium-malloc.m4  atheme-featuretest-warnings.m4  atheme-ldflags.m4  atheme-libtest-argon2.m4  atheme-libtest-clock-gettime.m4  atheme-libtest-crack.m4  atheme-libtest-cracklib.m4  atheme-libtest-crypt.m4  atheme-libtest-crypto.m4  atheme-libtest-dl.m4  atheme-libtest-gcrypt.m4  atheme-libtest-idn.m4  atheme-libtest-ldap.m4  atheme-libtest-math.m4  (+23 more)
(+2877 files in other folders)
